feat: members of the team andre and joseph added

--- a/index.html
+++ b/index.html
@@ -303,18 +303,18 @@
            
             <div class="box">
                 <span>04</span>
-                <img src="img/integrantes/Harold.jpg" alt="fotoPerfil">
+                <img src="img/integrantes/Joseph.jpeg" alt="fotoPerfil">
                 <div class="content">
-                    <h3>Harold Mayta </h3>
+                    <h3>Joseph Llachua </h3>
                     <p>Alumno</p>
                 </div>
             </div>
             
             <div class="box">
                 <span>05</span>
-                <img src="img/integrantes/nicolas.jpg" alt="fotoPerfil">
+                <img src="img/integrantes/André.png" alt="fotoPerfil">
                 <div class="content">
-                    <h3>Nicolas Vera</h3>
+                    <h3>André Arroyo</h3>
                     <p>Alumno</p>
                 </div>
             </div>
