feat: add member Juan Diego

--- a/index.html
+++ b/index.html
@@ -318,6 +318,14 @@
                     <p>Alumno</p>
                 </div>
             </div>
+            <div class="box">
+                <span>06</span>
+                <img src="img/integrantes/JuanHuaman.png" alt="fotoPerfil">
+                <div class="content">
+                    <h3>Juan Diego Huamán</h3>
+                    <p>Alumno</p>
+                </div>
+            </div>
         </div>
     </section>
         <section class="contacto" id="contacto">
