refactor: updating developer team's info

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                 <h3>Bienvenido a <span>UniRider</span></h3>
                 <p>Ofrecemos la oportunidad de viajar
                  de manera eficiente a un precio accesible.</p>
-                <P>Dile adiós a las largas esperas 
-                y a los viajes estresantes.</P>
+                <P>Dile adiós a las largas esperas.</P>
                 
             </div>
             <!-- FILEPATH: /C:/Users/Riva/Desktop/LANDINGPAGE-APPWEB/index.html -->
@@ -285,9 +284,9 @@
         
             <div class="box">
                 <span>02</span>
-                <img src="img/integrantes/Salva.png" alt="fotoPerfil">
+                <img src="img/integrantes/Elias.jpeg" alt="fotoPerfil">
                 <div class="content">
-                    <h3>Salvador Chamorro</h3>
+                    <h3>Elias Yauri Paucar</h3>
                     <p>Alumno</p>
                 </div>
             </div>
